# vetis_pydantic_types

./: .editorconfig  README.md  pyproject.toml
src/vetis_pydantic_types/: .xsdata.xml  __init__.py  base.py  cli.py  constants.py  logging.py  version.json  version_manager.py
src/vetis_pydantic_types/base/: __init__.py  application_base.py  clients_base.py  enum_base.py  exceptions.py  fields.py  operations_base.py  service_base.py
src/vetis_pydantic_types/crpt/: constants.py  services.py
src/vetis_pydantic_types/herriot/: constants.py  services.py
src/vetis_pydantic_types/mercury/: clients.py  constants.py  services.py
src/vetis_pydantic_types/mercury/types/: __init__.py  application_management_service_v2_0.py  application_v2_0.py  application_ws_definitions_v2_0.py  base_v2_0.py  base_ws_definitions_v2_0.py  dictionary_service_v2_1_pilot.py  dictionary_service_v2_1_production.py  dictionary_v2_1.py  document_v2_1.py  enterprise_service_v2_1_pilot.py  enterprise_service_v2_1_production.py  ikar_service_v2_1_pilot.py  ikar_service_v2_1_production.py  mercury_g2b_applications_v2_1.py  product_service_v2_1_pilot.py  product_service_v2_1_production.py  regionalization_service_v2_1_pilot.py  regionalization_service_v2_1_production.py  registry_ws_definitions_v2_1.py
src/vetis_pydantic_types/xsdata_ext/: class_type.py  client_generator.py  codegen_extensions.py  generator.py  insert_classes.py
src/vetis_pydantic_types/xsdata_ext/hooks/: cli.py
src/vetis_pydantic_types/xsdata_ext/templates/: vetis_ams_client.jinja2  vetis_enum.jinja2  vetis_registry_client.jinja2  (+1 more)
(+30 files in other folders)
